flux/apps/int/forgejo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-svc
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
spec:
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
  type: ClusterIP
